# devel_mysql_plugin

./: README.md  Source.tar.xz  TOC.md  ch01.md  ch02.md  ch03.md  ch05.md
.claude/sessions/: .last_inbox_check
Source/01_HelloWorld/Linux/: README.md  compile.sh  udf_hello_world.cpp
Source/01_HelloWorld/Mac/: Makefile  README.md  helloworld_udf.cpp
Source/02_HelloWorld_Args/Linux/: README.md  compile.sh  udf_hello_world_args.cpp
Source/02_HelloWorld_Args/Mac/: Makefile  README.md  helloworld_udf.cpp
Source/03_Median/Linux/: Makefile  README.md  median.cpp
Source/03_Median/Mac/: Makefile  README.md  my_median.cpp
Source/04_OS_logger/Linux/: Makefile  README.md  os_logger.cpp
Source/04_OS_logger/Mac/: Makefile  README.md  my_resource.cpp
Source/05_ReadParquet/Linux/: CMakeLists.txt  README.md  build.sh  ha_parquet.cc  ha_parquet.h
Source/05_ReadParquet/Mac/: CMakeLists.txt  README.md  build.sh  ha_parquet.cc  ha_parquet.h
pages/: 01-1.md  01-2.md  01-3.md  01-4.md  01-5.md  01-6.md  01-ch.md  02-1.md  02-2.md  02-3.md  02-4.md  02-5.md  02-6.md  02-ch.md  03-1.md  03-2.md  03-3.md  03-4.md  03-5.md  03-6.md  03-ch.md  04-1.md  04-2.md  04-3.md  04-4.md  04-5.md  04-6.md  04-7.md  04-ch.md  05-1.md  05-2.md  05-3.md  05-4.md  05-5.md  05-6.md  05-7.md  05-ch.md  06-A.md  06-B.md  06-C.md  (+1 more)
